--- a/BlazorAdmin2/appsettings.json
+++ b/BlazorAdmin2/appsettings.json
@@ -12,6 +12,11 @@
   "AllowedHosts": "*",
   "Jwt": {
     "Key": "SGoldYanKey",
-    "Issuer":  "GoldYan" 
+    "Issuer": "GoldYan"
+  },
+  "ConnectionStrings": {
+  
+    "DefaultConnection":  "server= localhost; port=3306; database=goldyan; user=root; password="
+
   }
 }
