Deleted unuseful things

--- a/BlazorAdmin2/appsettings.json
+++ b/BlazorAdmin2/appsettings.json
@@ -7,13 +7,10 @@
     }
   },
   "AllowedHosts": "*",
-  "Jwt": {
-    "Key": "SGoldYanKey",
-    "Issuer": "GoldYan"
-  },
+
   "ConnectionStrings": {
-  
-    "DefaultConnection":  "server= localhost; port=3306; database=goldyan; user=root; password="
+
+    "DefaultConnection": "Server = localhost; Database = goldyan; Uid = root; Pwd =;"
 
   }
 }
